quit bug to fix